<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    >
    <LinearLayout
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_width="0dp"
        android:layout_height="0dp">

    </LinearLayout>
    <TextView
        android:textStyle="bold"
        android:textColor="@color/win8_blue"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Decoder1 Set"
        android:textSize="30sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/win8_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume"/>
            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/valueofvolume"
                android:textStyle="bold"
                android:textColor="@color/win8_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />
        </LinearLayout>


        <SeekBar
            android:id="@+id/Volume"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="26"
            android:maxHeight="4.0dip"
            android:minHeight="4.0dip"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip"
            android:progressDrawable="@drawable/po_seekbar"
            android:thumb="@drawable/detail_icon_schedule_ball" />
    </LinearLayout>
    <TableLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <LinearLayout
                android:layout_weight="0.7"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/win8_blue"
                    android:layout_weight="0.3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/input_stream"
                    android:layout_gravity="start|center_vertical"/>
                <Spinner
                    android:layout_marginLeft="10dp"
                    android:id="@+id/input_Stream"
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minWidth="250dip"
                    android:prompt="@string/chooseVersion"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="@dimen/activity_horizontal_margin"
            android:layout_weight="0.5"
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="40dp" />
        <Button
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:layout_weight="0.5"
            android:text="@string/Refresh"
            android:textColor="@color/black"
            android:textSize="@dimen/activity_horizontal_margin"
            android:id="@+id/bt2"
            android:layout_width="0dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <ListView
        android:dividerHeight="1px"
        android:divider="@color/win8_blue"
        android:id="@+id/program"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
       >

    </ListView>

</LinearLayout>